--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -49,11 +49,13 @@ set_target_properties(RunCWrapper PROPERTIES LINKER_LANGUAGE CXX)
 add_test(NAME CWrapperTest COMMAND RunCWrapper)
 
 # CXX DHFR benchmark example
-add_executable (DHFRBenchmark dhfr_benchmark.cpp)
-target_link_libraries(DHFRBenchmark ${EXTERNAL_LIBRARIES})
-configure_file(data/dhfr_charges.txt . COPYONLY)
-configure_file(data/dhfr_c6s.txt . COPYONLY)
-configure_file(data/dhfr_coords.txt . COPYONLY)
+if(HAVE_MPI)
+    add_executable (DHFRBenchmark dhfr_benchmark.cpp)
+    target_link_libraries(DHFRBenchmark ${EXTERNAL_LIBRARIES})
+    configure_file(data/dhfr_charges.txt . COPYONLY)
+    configure_file(data/dhfr_c6s.txt . COPYONLY)
+    configure_file(data/dhfr_coords.txt . COPYONLY)
+endif()
 
 # CXX example
 add_executable (RunCXXWrapper fullexample.cpp)
