--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,13 +16,11 @@ inteltest:
   - mkdir -p build_intel
   - cd build_intel
   - rm -rf *
+  - export INTEL=/v/apps/intel/composer_xe_2017/compilers_and_libraries_2017.1.132/linux
+  - source ${INTEL}/bin/iccvars.sh intel64
+  - source ${INTEL}/mpi/intel64/bin/mpivars.sh
   - export PYTHONPATH=`pwd`/src
   - export PATH=/v/apps/cmake/3.7.1-centos7/bin:$PATH
-  - export PATH=/v/apps/intel/composer_xe_2017/compilers_and_libraries_2017.1.132/linux/bin:$PATH
-  - export PATH=/v/apps/intel/composer_xe_2017/compilers_and_libraries_2017.1.132/linux/mpi/intel64/bin:$PATH
-  - export LM_LICENSE_FILE=/v/apps/intel/licenses/2017_l_PK5BF7J3.lic
-  - export LD_LIBRARY_PATH=/v/apps/intel/composer_xe_2017/compilers_and_libraries_2017.1.132/linux/mkl/lib/intel64:${LD_LIBRARY_PATH}
-  - export LD_LIBRARY_PATH=/v/apps/intel/composer_xe_2017/compilers_and_libraries_2017.1.132/linux/compiler/lib/intel64:${LD_LIBRARY_PATH}
   - cmake -DPYTHON_EXECUTABLE=/v/apps/python/3.6.0-centos7/bin/python3 -DCMAKE_C_COMPILER=mpiicc -DCMAKE_CXX_COMPILER=mpiicpc -DCMAKE_Fortran_COMPILER=mpiifort -DCMAKE_PREFIX_PATH=/v/apps/fftw/3.3.7/intel_17.0.1 ..
   - make -j2
   - ctest -VV
