--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ inteltest:
   - export INTEL=/v/apps/intel/composer_xe_2017/compilers_and_libraries_2017.1.132/linux
   - source ${INTEL}/bin/iccvars.sh intel64
   - source ${INTEL}/mpi/intel64/bin/mpivars.sh
+  - export LM_LICENSE_FILE=/v/apps/intel/licenses/2017_l_PK5BF7J3.lic
   - export PYTHONPATH=`pwd`/src
   - export PATH=/v/apps/cmake/3.7.1-centos7/bin:$PATH
   - cmake -DPYTHON_EXECUTABLE=/v/apps/python/3.6.0-centos7/bin/python3 -DCMAKE_C_COMPILER=mpiicc -DCMAKE_CXX_COMPILER=mpiicpc -DCMAKE_Fortran_COMPILER=mpiifort -DCMAKE_PREFIX_PATH=/v/apps/fftw/3.3.7/intel_17.0.1 ..
