Small optimizations after profiling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,31 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0")
 set(CMAKE_Fortran_FLAGS_DEBUG "${CMAKE_Fortran_FLAGS_DEBUG} -O0")
 
+# BLAS
+if(ENABLE_BLAS)
+    # Attempt to distinguish MKL from other BLAS routines.  This doesn't work as-is :(
+    set(BLA_VENDOR "Intel")
+    find_package(BLAS QUIET)
+    if(BLAS_FOUND)
+        message(STATUS "${Cyan}Found Intel MKL${ColourReset}")
+        set(HAVE_MKL TRUE)
+    else()
+        set(BLA_VENDOR "All")
+        find_package(BLAS QUIET)
+    endif()
+endif()
+
+if(BLAS_FOUND)
+    add_definitions(-DHAVE_BLAS)
+    message(STATUS "${Cyan}Found BLAS: ${BLAS_LIBRARIES}${ColourReset}")
+else()
+    if(ENABLE_BLAS)
+        message(STATUS "${Red}BLAS not found${ColourReset}")
+    else()
+        message(STATUS "${Red}BLAS not searched for${ColourReset}")
+    endif()
+endif()
+
 # FFTW
 find_package(FFTW REQUIRED)
 if(HAVE_FFTWF)
@@ -99,22 +124,6 @@ if(OPENMP_FOUND)
     endif()
     if(DEFINED CMAKE_Fortran_COMPILER_ID)
         set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${OpenMP_Fortran_FLAGS}")
-    endif()
-endif()
-
-# BLAS
-if(ENABLE_BLAS)
-    find_package(BLAS)
-endif()
-
-if(BLAS_FOUND)
-    add_definitions(-DHAVE_BLAS)
-    message(STATUS "${Cyan}Found BLAS: ${BLAS_LIBRARIES}${ColourReset}")
-else()
-    if(ENABLE_BLAS)
-        message(STATUS "${Red}BLAS not found${ColourReset}")
-    else()
-        message(STATUS "${Red}BLAS not searched for${ColourReset}")
     endif()
 endif()
 
