--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -63,18 +63,18 @@ ENDMACRO()
 if(HAVE_MPI)
     MAKE_BENCHMARK("DHFR")
     MAKE_BENCHMARK("DMPC3x3")
-    #MAKE_BENCHMARK("WaterBox375")
-    #MAKE_BENCHMARK("WaterBox12288")
-    #MAKE_BENCHMARK("WaterBox24000")
-    #MAKE_BENCHMARK("WaterBox41472")
-    #MAKE_BENCHMARK("WaterBox65856")
-    #MAKE_BENCHMARK("WaterBox98304")
-    #MAKE_BENCHMARK("WaterBox255552")
-    #MAKE_BENCHMARK("WaterBox331776")
-    #MAKE_BENCHMARK("WaterBox139968")
-    #MAKE_BENCHMARK("WaterBox192000")
-    #MAKE_BENCHMARK("WaterBox421824")
-    #MAKE_BENCHMARK("WaterBox526848")
+    MAKE_BENCHMARK("WaterBox375")
+    MAKE_BENCHMARK("WaterBox12288")
+    MAKE_BENCHMARK("WaterBox24000")
+    MAKE_BENCHMARK("WaterBox41472")
+    MAKE_BENCHMARK("WaterBox65856")
+    MAKE_BENCHMARK("WaterBox98304")
+    MAKE_BENCHMARK("WaterBox255552")
+    MAKE_BENCHMARK("WaterBox331776")
+    MAKE_BENCHMARK("WaterBox139968")
+    MAKE_BENCHMARK("WaterBox192000")
+    MAKE_BENCHMARK("WaterBox421824")
+    MAKE_BENCHMARK("WaterBox526848")
 endif()
 
 # CXX example
