--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,10 @@
 set(sources_list
         helpme.cc
-        fftw_wrapper.h
         )
 
 include_directories(${FFTW_INCLUDES})
 add_library(helpmestatic ${sources_list})
-target_link_libraries(helpmestatic PUBLIC ${FFTW_LIBRARIES})
+target_link_libraries(helpmestatic PUBLIC fftw::fftw)
 target_link_libraries(helpmestatic PUBLIC OpenMP::OpenMP_CXX)
 
 if(Fortran_ENABLED AND CMAKE_Fortran_COMPILER_ID MATCHES Intel)
