--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,69 +1,32 @@
 add_subdirectory(unittests)
 
-# Add any new sources here
-set(SOURCES_HELPME
-    cartesiantransform.h
-    fftw_wrapper.h
-    gamma.h
-    gridsize.h
-    helpme.h
-    lapack_wrapper.h
-    matrix.h
-    memory.h
-    mpi_wrapper.h
-    powers.h
-    splines.h
-    string_utils.h
-)
-
-foreach(SOURCE_FILE ${SOURCES_HELPME})
-    list (APPEND HELPME_INPUT_SOURCES "${PROJECT_SOURCE_DIR}/src/${SOURCE_FILE}")
-endforeach()
-
-include_directories(${PROJECT_SOURCE_DIR}/src)
-include_directories(${PROJECT_SOURCE_DIR}/single_include)
-include_directories(${FFTW_INCLUDES})
-
 if(HAVE_MPI)
     link_libraries(${MPI_CXX_LIBRARIES})
 endif()
 
-# Ensure headers are inlined every time a build is triggered
-add_custom_command(
-    OUTPUT StandaloneHeader
-    COMMAND ${PYTHON_EXECUTABLE} inline_headers.py
-    DEPENDS ${HELPME_INPUT_SOURCES}
-    WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/tools"
-    COMMENT "Generating single header..."
-)
-
-add_custom_target(SingleHeader
-                  DEPENDS StandaloneHeader
-)
-
 # C example
-add_executable (RunCWrapper fullexample.c)
-add_dependencies(RunCWrapper helpmestatic)
-target_link_libraries(RunCWrapper helpmestatic)
-set_target_properties(RunCWrapper PROPERTIES LINKER_LANGUAGE CXX)
+#set_target_properties(RunCWrapper PROPERTIES LINKER_LANGUAGE CXX)
+add_executable(RunCWrapper fullexample.c)
+target_link_libraries(RunCWrapper intf_C)
 add_test(NAME CWrapperTest COMMAND RunCWrapper)
 
 # CXX DHFR benchmark example
 add_executable (DHFRBenchmark dhfr_benchmark.cpp)
-target_link_libraries(DHFRBenchmark ${EXTERNAL_LIBRARIES})
+target_link_libraries(DHFRBenchmark intf_CXX)
 configure_file(data/dhfr_charges.txt . COPYONLY)
 configure_file(data/dhfr_c6s.txt . COPYONLY)
 configure_file(data/dhfr_coords.txt . COPYONLY)
 
 # CXX example
 add_executable (RunCXXWrapper fullexample.cpp)
-target_link_libraries(RunCXXWrapper ${EXTERNAL_LIBRARIES})
+target_link_libraries(RunCXXWrapper intf_CXX)
 add_test(NAME CXXWrapperTest COMMAND RunCXXWrapper)
 
 # CXX example using standalone header file
 add_executable (RunCXXWrapperStandalone fullexample.cpp)
-add_dependencies(RunCXXWrapperStandalone SingleHeader)
-target_link_libraries(RunCXXWrapperStandalone ${EXTERNAL_LIBRARIES})
+target_link_libraries (RunCXXWrapperStandalone intf_CXX)
+#add_dependencies(RunCXXWrapperStandalone SingleHeader)
+#target_link_libraries(RunCXXWrapperStandalone ${EXTERNAL_LIBRARIES})
 target_compile_definitions(RunCXXWrapperStandalone PRIVATE "BUILD_STANDALONE=1")
 add_test(NAME CXXWrapperStandaloneTest COMMAND RunCXXWrapperStandalone)
 
@@ -81,7 +44,7 @@ if(HAVE_MPI)
 
     # C example
     add_executable (RunCMPIWrapper fullexample_parallel.c)
-    target_link_libraries(RunCMPIWrapper helpmestatic)
+    target_link_libraries(RunCMPIWrapper helpmelib)
     set_target_properties(RunCMPIWrapper PROPERTIES LINKER_LANGUAGE CXX)
     add_test(NAME CMPIWrapperTestX
              COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS} ./RunCMPIWrapper 2 1 1 ${MPIEXEC_POSTFLAGS})
@@ -95,7 +58,7 @@ if(HAVE_MPI)
         link_libraries(${MPI_Fortran_LIBRARIES})
         add_executable(RunFortranMPIWrapper ${PROJECT_SOURCE_DIR}/src/helpme.F90 fullexample_parallel.F90 )
         set_target_properties(RunFortranMPIWrapper PROPERTIES LINKER_LANGUAGE Fortran)
-        target_link_libraries(RunFortranMPIWrapper helpmestatic ${cpplib})
+        target_link_libraries(RunFortranMPIWrapper helpmelib ${cpplib})
         add_test(NAME FortranMPIWrapperTestX
                  COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS} ./RunFortranMPIWrapper 2 1 1 ${MPIEXEC_POSTFLAGS})
         add_test(NAME FortranMPIWrapperTestY
@@ -107,22 +70,23 @@ endif()
 
 # Fortran example
 if(Fortran_ENABLED)
-    add_executable(RunFortranWrapper ${PROJECT_SOURCE_DIR}/src/helpme.F90 fullexample.F90 )
-    target_link_libraries(RunFortranWrapper helpmestatic ${cpplib})
-    set_target_properties(RunFortranWrapper PROPERTIES LINKER_LANGUAGE Fortran)
+    add_executable(RunFortranWrapper fullexample.F90)
+    target_link_libraries(RunFortranWrapper intf_Fortran)
     add_test(NAME FortranWrapper COMMAND RunFortranWrapper)
+    #target_link_libraries(RunFortranWrapper helpmelib ${cpplib})
+    #set_target_properties(RunFortranWrapper PROPERTIES LINKER_LANGUAGE Fortran)
 endif()
 
 # Add python tests
 if(${INSTALL_PYMOD})
     add_test(NAME PythonWrappers
-             #COMMAND ${PYTHON_EXECUTABLE} setup.py test
-             COMMAND ${PYTHON_EXECUTABLE} -m unittest
-             #WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../python
+             COMMAND ${PYTHON_EXECUTABLE} -m pytest -rws -v --capture=sys ${CMAKE_CURRENT_SOURCE_DIR}
+             WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../python
     )
-    install(FILES fullexample.py
+    install(FILES test_helpme.py
             DESTINATION ${CMAKE_INSTALL_LIBDIR}${PYMOD_INSTALL_LIBDIR}/helpme/tests)
 endif()
+
 
 # Make sure examples are installed
 set(EXAMPLEFILES fullexample.c fullexample.cpp fullexample.F90 fullexample.py)
