new cmake for all

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ jobs:
           -DCMAKE_C_COMPILER=${C_COMPILER}
           -DCMAKE_Fortran_COMPILER=${Fortran_COMPILER}
           -DPYTHON_EXECUTABLE=`which python`
+          -DINSTALL_PYMOD=ON
       - cd build
       - make -j 2
       script: ctest -j 2 -VV
@@ -79,17 +80,20 @@ jobs:
       - python -V
       - python -c 'import numpy; print(numpy.version.version)'
       - cd ${TRAVIS_BUILD_DIR}
+      - curl https://cmake.org/files/v3.12/cmake-3.12.4-Linux-x86_64.tar.gz --output cmake.tgz
+      - tar -xzvf cmake.tgz
       - export CTEST_OUTPUT_ON_FAILURE=1
       - ${CXX_COMPILER} --version
       - ${Fortran_COMPILER} --version
       - ${C_COMPILER} --version
       - >
-          cmake -Bbuild -H.
+          ./cmake-3.12.4-Linux-x86_64/bin/cmake -Bbuild -H.
           -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
           -DCMAKE_CXX_COMPILER=${CXX_COMPILER}
           -DCMAKE_C_COMPILER=${C_COMPILER}
           -DCMAKE_Fortran_COMPILER=${Fortran_COMPILER}
           -DPYTHON_EXECUTABLE=`which python`
+          -DINSTALL_PYMOD=ON
       - cd build
       - make -j 2
       script: ctest -j 2 -VV
@@ -122,19 +126,22 @@ jobs:
       - python -V
       - python -c 'import numpy; print(numpy.version.version)'
       - cd ${TRAVIS_BUILD_DIR}
+      - curl https://cmake.org/files/v3.12/cmake-3.12.4-Linux-x86_64.tar.gz --output cmake.tgz
+      - tar -xzvf cmake.tgz
       - export CTEST_OUTPUT_ON_FAILURE=1
       - export PATH=${TRAVIS_BUILD_DIR}:${PATH}
       - ${CXX_COMPILER} --version
       - ${Fortran_COMPILER} --version
       - ${C_COMPILER} --version
       - >
-          cmake -Bbuild -H.
+          ./cmake-3.12.4-Linux-x86_64/bin/cmake -Bbuild -H.
           -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
           -DENABLE_CODE_COVERAGE=ON
           -DCMAKE_CXX_COMPILER=${CXX_COMPILER}
           -DCMAKE_C_COMPILER=${C_COMPILER}
           -DCMAKE_Fortran_COMPILER=${Fortran_COMPILER}
           -DPYTHON_EXECUTABLE=`which python`
+          -DINSTALL_PYMOD=ON
       - cd build
       - cat CMakeCache.txt
       - make VERBOSE=1 -j 2
