--- a/test/unittests/CMakeLists.txt
+++ b/test/unittests/CMakeLists.txt
@@ -8,6 +8,7 @@ set( SOURCES_UNITTESTS_TESTS
     unittest-fullrun-multipoles.cpp
     unittest-gammafunction.cpp
     unittest-gridsize.cpp
+    unittest-individualshells.cpp
     unittest-lattice.cpp
     unittest-latticeupdates.cpp
     unittest-matrix.cpp
