Improve MKL CMake detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,13 +75,13 @@ set(CMAKE_Fortran_FLAGS_DEBUG "${CMAKE_Fortran_FLAGS_DEBUG} -O0")
 # BLAS
 if(ENABLE_BLAS)
     # Attempt to distinguish MKL from other BLAS routines.  This doesn't work as-is :(
-    set(BLA_VENDOR "Intel")
-    find_package(BLAS QUIET)
-    if(BLAS_FOUND)
-        message(STATUS "${Cyan}Found Intel MKL${ColourReset}")
+    include(FindMKL)
+    find_package(MKL QUIET)
+    if(MKL_FOUND)
         set(HAVE_MKL TRUE)
+        set(BLAS_FOUND TRUE)
+        set(BLAS_LIBRARIES ${MKL_GNU} ${MKL_SEQUENTIAL} ${MKL_CORE})
     else()
-        set(BLA_VENDOR "All")
         find_package(BLAS QUIET)
     endif()
 endif()
