Only make benchmarks for release build

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -60,20 +60,21 @@ MACRO(MAKE_BENCHMARK testname)
 ENDMACRO()
 
 # Benchmark examples
-if(HAVE_MPI)
-#    MAKE_BENCHMARK("DHFR")
-#    MAKE_BENCHMARK("DMPC3x3")
-#    MAKE_BENCHMARK("WaterBox12288")
-#    MAKE_BENCHMARK("WaterBox24000")
-#    MAKE_BENCHMARK("WaterBox41472")
-#    MAKE_BENCHMARK("WaterBox65856")
-#    MAKE_BENCHMARK("WaterBox98304")
-#    MAKE_BENCHMARK("WaterBox255552")
-#    MAKE_BENCHMARK("WaterBox331776")
-#    MAKE_BENCHMARK("WaterBox139968")
-#    MAKE_BENCHMARK("WaterBox192000")
-#    MAKE_BENCHMARK("WaterBox421824")
-#    MAKE_BENCHMARK("WaterBox526848")
+if(HAVE_MPI AND NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
+    message(STATUS "${Cyan}Release build detected: building benchmarks${ColourReset}")
+    MAKE_BENCHMARK("DHFR")
+    MAKE_BENCHMARK("DMPC3x3")
+    MAKE_BENCHMARK("WaterBox12288")
+    MAKE_BENCHMARK("WaterBox24000")
+    MAKE_BENCHMARK("WaterBox41472")
+    MAKE_BENCHMARK("WaterBox65856")
+    MAKE_BENCHMARK("WaterBox98304")
+    MAKE_BENCHMARK("WaterBox255552")
+    MAKE_BENCHMARK("WaterBox331776")
+    MAKE_BENCHMARK("WaterBox139968")
+    MAKE_BENCHMARK("WaterBox192000")
+    MAKE_BENCHMARK("WaterBox421824")
+    MAKE_BENCHMARK("WaterBox526848")
 endif()
 
 # CXX example
