--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ jobs:
           - llvm-toolchain-precise-3.6
           - ubuntu-toolchain-r-test
           packages:
+          - libblas-dev
           - liblapack-dev
           - libfftw3-dev
           - clang-3.6
@@ -62,6 +63,7 @@ jobs:
           - llvm-toolchain-precise-3.6
           - ubuntu-toolchain-r-test
           packages:
+          - libblas-dev
           - liblapack-dev
           - libfftw3-dev
           - g++-4.9
@@ -105,6 +107,7 @@ jobs:
           - ubuntu-toolchain-r-test
           packages:
           - lcov
+          - libblas-dev
           - liblapack-dev
           - libfftw3-dev
           - gfortran
